--- a/pom.xml
+++ b/pom.xml
@@ -1309,6 +1309,12 @@
             <version>1.3.4</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>ikube</groupId>
+            <artifactId>scanner</artifactId>
+            <version>1.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 	<repositories>
