--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -42,6 +42,22 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.2</version>
+				<!--
+				 We need to add this because
+				 -->
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+						</manifest>
+					</archive>
+					<webResources>
+						<resource>
+							<!-- This is relative to the pom.xml directory -->
+							<directory>${project.basedir}/src/main/resources</directory>
+						</resource>
+					</webResources>
+				</configuration>
 			</plugin>
 			<!-- 
 				This plugin reads the properties from the build.properties file and makes them all available
