--- a/code/tool/pom.xml
+++ b/code/tool/pom.xml
@@ -140,6 +140,16 @@
             <artifactId>ant</artifactId>
             <version>1.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.qpid</groupId>
+            <artifactId>qpid-client</artifactId>
+            <version>0.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.7.0</version>
+        </dependency>
     </dependencies>
 
 </project>
