Fixing the analyzer tests, hopefully.

--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -19,8 +19,14 @@
         <jetty-version>7.6.15.v20140411</jetty-version>
         <jetty-stop-key>stop</jetty-stop-key>
         <jetty-stop-port>9180</jetty-stop-port>
-        <jetty-jmx-args>-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9010 -Dcom.sun.management.jmxremote.local.only=false -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false</jetty-jmx-args>
-        <jetty-jvm-args>-Xms512m -Xmx2048m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled ${jetty-jmx-args}</jetty-jvm-args>
+        <jetty-jmx-args>
+            -Dcom.sun.management.jmxremote
+            -Dcom.sun.management.jmxremote.port=9010
+            -Dcom.sun.management.jmxremote.local.only=false
+            -Dcom.sun.management.jmxremote.authenticate=false
+            -Dcom.sun.management.jmxremote.ssl=false
+        </jetty-jmx-args>
+        <jetty-jvm-args>-Xms512m -Xmx2048m -XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled</jetty-jvm-args>
 	</properties>
 
 	<build>
@@ -115,6 +121,9 @@
 							<goal>run</goal>
 						</goals>
                         <configuration>
+                            <!--
+                                To run in forked mode this causes H2 to complain that the database is locked
+                            -->
                             <!--<stopKey>${jetty-stop-key}</stopKey>-->
                             <!--<stopPort>${jetty-stop-port}</stopPort>-->
                             <!--<waitForChild>false</waitForChild>-->
