--- a/code/web/pom.xml
+++ b/code/web/pom.xml
@@ -104,6 +104,12 @@
             <version>${jetty-version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.34</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
