Just comitting whatever changes I have on the machine, no idea what they are.

--- a/code/tool/src/main/resources/deploy/spring.properties
+++ b/code/tool/src/main/resources/deploy/spring.properties
@@ -53,7 +53,7 @@ tomcat-three-chmod=chmod 777 -R ${tomcat-three}
 tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup}
 
 # The ip address of the production server with Jenkins etc...
-server-production-ip=192.168.1.20
+server-production-ip=ikube.be
 
 tomcat-name-production=apache-tomcat-7.0.42
 tomcat-production=/home/${tomcat-name-production}
