Changed the parsers to Tika.

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -8,17 +8,17 @@ max.age=6000
 # These parameters are destined for the index context
 buffer.size=256
 compound.file=true
-merge.factor=1000
-buffered.docs=1000
+merge.factor=10
+buffered.docs=10
 max.field.length=1000
-max.read.length=100000
+max.read.length=10000000
 index.root=/tmp
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
 internet.batch.size=10
 file.batch.size=10
-file.max.read.length=100000
+file.max.read.length=10000000
 throttle=0
 max.actions=5
 # Max index size before another one is started in megs
