--- a/pom.xml
+++ b/pom.xml
@@ -891,7 +891,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>1.0</version>
+            <version>1.9</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -1295,6 +1295,11 @@
             <artifactId>bval-jsr303</artifactId>
             <version>0.5</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.7</version>
         </dependency>
     </dependencies>
 
