Configuration for the deployer.

--- a/code/tool/src/main/resources/deploy/spring.properties
+++ b/code/tool/src/main/resources/deploy/spring.properties
@@ -64,7 +64,7 @@ tomcat-production-kill=pkill -9 -f '${tomcat-name-production}'
 tomcat-production-chmod=chmod 777 -R ${tomcat-production}
 tomcat-production-startup=${profile};cd ${tomcat-production-bin};${startup}
 
-server-site-ip=192.168.1.20
+server-site-ip=192.168.1.42
 
 tomcat-name-site=apache-tomcat-7.0.42
 tomcat-site=/home/${tomcat-name-site}
@@ -87,3 +87,15 @@ tomcat-bosal-shutdown=${profile};cd ${tomcat-bosal-bin};${shutdown}
 tomcat-bosal-kill=pkill -9 -f '${tomcat-name-bosal}'
 tomcat-bosal-chmod=chmod 777 -R ${tomcat-bosal}
 tomcat-bosal-startup=${profile};cd ${tomcat-bosal-bin};${startup}
+
+# The ip address of the FIS index server
+server-fis-ip=192.168.1.42
+
+tomcat-name-fis=apache-tomcat-7.0.42-1
+tomcat-fis=/home/${tomcat-name-fis}
+tomcat-fis-bin=${tomcat-fis}/bin
+tomcat-fis-webapps=${tomcat-fis}/webapps
+tomcat-fis-shutdown=${profile};cd ${tomcat-fis-bin};${shutdown}
+tomcat-fis-kill=pkill -9 -f '${tomcat-name-fis}'
+tomcat-fis-chmod=chmod 777 -R ${tomcat-fis}
+tomcat-fis-startup=${profile};cd ${tomcat-fis-bin};${startup}
