--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -11,14 +11,14 @@ compound.file=true
 merge.factor=10
 buffered.docs=10
 max.field.length=1000
-max.read.length=10000000
+max.read.length=100000
 index.root=/tmp
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
 internet.batch.size=10
 file.batch.size=10
-file.max.read.length=10000000
+file.max.read.length=100000
 throttle=0
 max.actions=5
 # Max index size before another one is started in megs
@@ -98,7 +98,7 @@ h2.jdbc.url=jdbc:h2:file:ikube/ikube;DB_CLOSE_ON_EXIT=FALSE
 
 #General JDBC settings
 jdbc.minPoolSize=10
-jdbc.maxPoolSize=1000
+jdbc.maxPoolSize=100
 jdbc.maxStatements=1000
 jdbc.checkOutTimeout=60000
 jdbc.numHelperThreads=10
@@ -181,7 +181,7 @@ hz-search-map=search
 hz-save-point-map=save-point
 
 hz-map-backup-count=0
-hz-map-max-size=1000
+hz-map-max-size=100
 hz-map-eviction-percentage=75
 hz-map-read-backup-data=true
 hz-map-eviction-policy=LFU
@@ -202,7 +202,7 @@ token=2257682162-Z4HFFXnmucyRS3TuCTPE3dOpr2qEYuaE5WiExOp
 token-secret=6YdLo8Udm5SVMO3WGX1753xnKdGp5eBalQBtcKTb19CpI
 
 # Analytics models for Twitter threshold
-max-training=10000
+max-training=1000
 
 # How long the analyzer manager will wait before building the analyzers
 analyzer-manager-wait=3600000
