--- a/pom.xml
+++ b/pom.xml
@@ -64,14 +64,14 @@
         <spring-security-oauth-version>3.19</spring-security-oauth-version>
 
         <!-- Serenity parameters -->
-        <write-classes>-Dwrite.classes=true</write-classes>
+        <write-classes>-Dwrite.classes=false</write-classes>
         <clean-classes>-Dclean.classes=true</clean-classes>
         <included-packages>-Dincluded.packages=ikube</included-packages>
-        <excluded-packages>-Dexcluded.packages=model:Mock:Test:Integration:Option</excluded-packages>
+        <excluded-packages>-Dexcluded.packages=model:Mock:Test:Integration:Option:Scanner</excluded-packages>
         <included-adapters>-Dincluded.adapters=coverage:complexity:dependency</included-adapters>
         <serenity-parameters>${write-classes} ${clean-classes} ${included-packages} ${excluded-packages} ${included-adapters} -noverify</serenity-parameters>
 
-        <memory-parameters>-XX:PermSize=256m -XX:MaxPermSize=1024m -Xms1024m -Xmx4096m</memory-parameters>
+        <memory-parameters>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx2048m</memory-parameters>
 
         <!--
             Lucene:
