Fixing the deployer to be more precise with the folders and files to copy.

--- a/code/tool/src/main/resources/deploy/spring.properties
+++ b/code/tool/src/main/resources/deploy/spring.properties
@@ -2,9 +2,11 @@ ikube-war=ikube.war
 site-war=site.war
 in-parallel=true
 
-project-directory=
-resources-directory=code/libs/src/main/resources
-tail-script=scripts/tail.sh
+project-directory=/home/laptop/Workspace/ikube
+target-directory=${project-directory}/code/war/target
+target-directory-site=${project-directory}/code/site/target
+resources-directory=${project-directory}/code/libs/src/main/resources
+tail-script=${project-directory}/scripts/tail.sh
 
 # The ip address of the system test server, 64 core
 server-system-ip=192.168.1.10
@@ -53,7 +55,7 @@ tomcat-three-chmod=chmod 777 -R ${tomcat-three}
 tomcat-three-startup=${profile};cd ${tomcat-three-bin};${startup}
 
 # The ip address of the production server with Jenkins etc...
-server-production-ip=ikube.be
+server-production-ip=192.168.1.42
 
 tomcat-name-production=apache-tomcat-7.0.42
 tomcat-production=/home/${tomcat-name-production}
