--- a/pom.xml
+++ b/pom.xml
@@ -955,6 +955,12 @@
             <artifactId>openjpa</artifactId>
             <version>2.2.1</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>asm</groupId>
+                    <artifactId>asm</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>de.schlichtherle.truezip</groupId>
