Made a new version, 5.3.0, and changed the configuration to take 10 meg files.

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -11,14 +11,14 @@ compound.file=true
 merge.factor=10
 buffered.docs=10
 max.field.length=1000
-max.read.length=100000
+max.read.length=10000000
 index.root=/tmp
 index.directory.path=${index.root}/indexes
 index.directory.path.backup=${index.directory.path}
 jdbc.batch.size=10000
 internet.batch.size=10
 file.batch.size=10
-file.max.read.length=100000
+file.max.read.length=10000000
 throttle=0
 max.actions=5
 # Max index size before another one is started in megs
@@ -31,7 +31,7 @@ not.stored=false
 vectored=true
 unpack.zips=true
 
-max.memory=4000
+max.memory=6000
 
 wiki.read.length=1000000
 wiki.index.age=100800
@@ -59,8 +59,8 @@ searcher.web.service.url=http://ikube.be/ikube/service/search/json
 # of the queries, specifically 26 levels will give an accurracy of about
 # one metre and 11 levels about 50 metres. We set the default quite low as
 # accurracy is probably the biggest issue
-max-geohash-levels=7
-max-geohash-levels-twitter=7
+max-geohash-levels=9
+max-geohash-levels-twitter=9
 
 ################################################
 ## These properties should generally not be modified by clients               ##
