Trying to get the vm to start without the X11 server.

--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -46,7 +46,7 @@ filesystem.handler.threads=3
 email.handler.threads=3
 
 # These parameters are client specific
-files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(pwds).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(/dev).*|.*(/lib).*|.*(/run).*|.*(/etc).*|.*(.plugins).*|.*(autofs).*
+files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.exe).*|.*(.dll).*|.*(pwds).*|.*(password).*|.*(RSA).*|.*(MANIFEST).*|.*(/root).*|.*(/proc).*|.*(/bin).*|.*(/boot).*|.*(/sbin).*|.*(/sys).*|.*(backup).*|.*(/sys).*|.*(/media).*|.*(/mnt).*|.*(/dev).*|.*(/lib).*|.*(/run).*|.*(/etc).*|.*(.plugins).*|.*(autofs).*|.*(.class).*
 internet.excluded.pattern=.*(/search).*|.*(r=).*|.*(terminate).*|.*(startup).*|.*(feedback).*|.*(trunk).*
 
 language.word.lists.directory=./ikube/common/languages
