--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,7 @@
                 <version>2.6</version>
                 <configuration>
                     <forkMode>once</forkMode>
-                    <argLine>-XX:PermSize=512m -XX:MaxPermSize=1024m -Xms2048m -Xmx4096m</argLine>
+                    <argLine>-XX:PermSize=512m -XX:MaxPermSize=1024m -Xms2048m -Xmx4096m -Djava.awt.headless=true</argLine>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/*Integration*.java</include>
