--- a/code/libs/src/main/resources/ikube/common/spring.properties
+++ b/code/libs/src/main/resources/ikube/common/spring.properties
@@ -170,8 +170,8 @@ hz-network-port-auto-increment=true
 hz-multicast-enabled=true
 hz-multicast-group=224.1.2.3
 
-hz-tcp-ip-enabled=true
-hz-interfaces-enabled=true
+hz-tcp-ip-enabled=false
+hz-interfaces-enabled=false
 hz-tcp-ip-interface=192.168.1.*
 #hz-tcp-ip-interface=10.1.24.130
 hz-members=192.168.1.8:8020,192.168.1.10:8020,192.168.1.20:8020
