--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
         <included-adapters>-Dincluded.adapters=coverage:complexity:dependency</included-adapters>
         <serenity-parameters>${write-classes} ${clean-classes} ${included-packages} ${excluded-packages} ${included-adapters} -noverify</serenity-parameters>
 
-        <memory-parameters>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx2048m</memory-parameters>
+        <memory-parameters>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx4096m</memory-parameters>
 
         <!--
             Lucene:
@@ -246,7 +246,7 @@
                 <version>2.6</version>
                 <configuration>
                     <forkMode>once</forkMode>
-                    <argLine>-XX:PermSize=512m -XX:MaxPermSize=1024m -Xms2048m -Xmx4096m -Djava.awt.headless=true</argLine>
+                    <argLine>-XX:PermSize=256m -XX:MaxPermSize=512m -Xms1024m -Xmx2048m -Djava.awt.headless=true</argLine>
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/*Integration*.java</include>
@@ -882,12 +882,13 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.3.176</version>
-            <scope>compile</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.h2database</groupId>-->
+            <!--<artifactId>h2</artifactId>-->
+            <!--&lt;!&ndash;<version>1.3.176</version>&ndash;&gt;-->
+            <!--<version>1.4.182</version>-->
+            <!--<scope>compile</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
@@ -928,7 +929,47 @@
         <dependency>
             <groupId>org.gridgain</groupId>
             <artifactId>gridgain-streaming</artifactId>
-            <version>${gridgain-version}</version>
+            <version>6.1.6</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tika</groupId>
+                    <artifactId>tika-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.tika</groupId>
+                    <artifactId>tika-parsers</artifactId>
+                </exclusion>
+                <!--<exclusion>-->
+                    <!--<groupId>com.h2database</groupId>-->
+                    <!--<artifactId>h2</artifactId>-->
+                <!--</exclusion>-->
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.gridgain</groupId>
+            <artifactId>gridgain-core</artifactId>
+            <version>6.1.8</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.tika</groupId>
+                    <artifactId>tika-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.tika</groupId>
+                    <artifactId>tika-parsers</artifactId>
+                </exclusion>
+                <!--<exclusion>-->
+                    <!--<groupId>com.h2database</groupId>-->
+                    <!--<artifactId>h2</artifactId>-->
+                <!--</exclusion>-->
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.gridgain</groupId>
+            <artifactId>gridgain-datagrid</artifactId>
+            <version>6.1.6</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -941,21 +982,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>org.gridgain</groupId>
-            <artifactId>gridgain-datagrid</artifactId>
-            <version>${gridgain-version}</version>
-            <scope>compile</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.apache.tika</groupId>
-                    <artifactId>tika-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.tika</groupId>
-                    <artifactId>tika-parsers</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>gridgain-indexing</artifactId>
+            <version>6.5.1</version>
         </dependency>
 
         <dependency>
