Fiddling with the dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,7 @@
                     <forkMode>once</forkMode>
                     <testFailureIgnore>true</testFailureIgnore>
                     <!--suppress MavenModelInspection -->
-                    <argLine>-javaagent:${project.parent.basedir}/serenity/serenity.jar -Djava.awt.headless=true ${serenity-parameters} ${memory-parameters}</argLine>
+                    <!--<argLine>-javaagent:${project.parent.basedir}/serenity/serenity.jar -Djava.awt.headless=true ${serenity-parameters} ${memory-parameters}</argLine>-->
                 </configuration>
             </plugin>
             <!-- This plugin runs the integration tests. -->
