--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -1,10 +1,10 @@
 # Root Logger
-log4j.rootLogger=INFO, console, file
-log4j.rootCategory=INFO, console
+log4j.rootLogger=WARN, console, file
+log4j.rootCategory=WARN, console
 
 # ikube application file logging
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.Threshold=INFO
+log4j.appender.file.Threshold=WARN
 log4j.appender.file.File=ikube/ikube.log
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
@@ -15,7 +15,7 @@ log4j.appender.file.MaxBackupIndex=4
 
 # ikube application console logging
 log4j.appender.console=org.apache.log4j.ConsoleAppender
-log4j.appender.console.Threshold=INFO
+log4j.appender.console.Threshold=WARN
 log4j.appender.console.ImmediateFlush=true
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
