Changed the logging for the file system crawler to debug to check the integration tests.

--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -26,4 +26,4 @@ log4j.category.com=WARN
 log4j.category.org=WARN
 
 log4j.category.ikube=WARN
-log4j.category.ikube.action.index.handler.filesystem=DEBUG
+log4j.category.ikube.action.index.handler.filesystem=WARN
