--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -26,4 +26,4 @@ log4j.category.com=INFO
 log4j.category.org=INFO
 
 log4j.category.ikube=INFO
-log4j.category.ikube.action.index.handler.filesystem=DEBUG
+log4j.category.ikube.action.index.handler.filesystem=INFO
