--- a/code/libs/src/main/resources/ikube/log4j.properties
+++ b/code/libs/src/main/resources/ikube/log4j.properties
@@ -21,9 +21,9 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %C{1}.%M(%L) - %m%n
 
 # set the categories
-log4j.category.net=INFO
-log4j.category.com=INFO
-log4j.category.org=INFO
+log4j.category.net=WARN
+log4j.category.com=WARN
+log4j.category.org=WARN
 
 log4j.category.ikube=INFO
 log4j.category.ikube.action.index.handler.filesystem=INFO
