Fixing tests again...

--- a/code/tool/src/main/resources/deploy/spring.properties
+++ b/code/tool/src/main/resources/deploy/spring.properties
@@ -101,3 +101,16 @@ tomcat-fis-shutdown=${profile};cd ${tomcat-fis-bin};${shutdown}
 tomcat-fis-kill=pkill -9 -f '${tomcat-name-fis}'
 tomcat-fis-chmod=chmod 777 -R ${tomcat-fis}
 tomcat-fis-startup=${profile};cd ${tomcat-fis-bin};${startup}
+
+
+# The ip address of the FIS index server
+server-development-ip=192.168.1.28
+
+tomcat-name-development=apache-tomcat-7.0.42
+tomcat-development=/usr/${tomcat-name-development}
+tomcat-development-bin=${tomcat-development}/bin
+tomcat-development-webapps=${tomcat-development}/webapps
+tomcat-development-shutdown=${profile};cd ${tomcat-development-bin};${shutdown}
+tomcat-development-kill=pkill -9 -f '${tomcat-name-development}'
+tomcat-development-chmod=chmod 777 -R ${tomcat-development}
+tomcat-development-startup=${profile};cd ${tomcat-development-bin};${startup}
